--- a/uda/static/css/index.css
+++ b/uda/static/css/index.css
@@ -215,4 +215,10 @@ display: flex;
     margin-top: 5px;
     font-size: 14px;
 }
-    
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /* width: 50%; */
+}
